--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1 style="font-family: work-sans;">
+        font added in my website
+    </h1>
+    <h1 style="font-family: open-sans;">
+        font added in my website
+    </h1>
 </body>
 </html>
