header section  html file complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="header-title">
+            <h1> All Thinks Are Possible If You Believe</h1>
+        </div>
+        <div class="header-discrip">
+            <p>
+                There are many variations of passages of lorem ipsum available, but the majority have suffered alteration in some form, by injected humour,or randomised words.
+            </p>
+        </div>
+        <div class="header-btn">
+            <button>Contact Us</button>
+        </div>
+    </header>
 </body>
 </html>
