about section start

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
         </div>
     </header>
     <!-- header section end -->
+
+    <!-- about section start -->
+    
+    <!-- about section end -->
 </body>
 </html>
