about section setup

--- a/index.html
+++ b/index.html
@@ -26,9 +26,25 @@
         </div>
     </header>
     <!-- header section end -->
-
+<!-- =================================================== -->
+<!-- =================================================== -->
     <!-- about section start -->
-    
+        <section>
+            <div class="about-image">
+
+            </div>
+            <div class="my-discrip">
+                <div class="discrip-title">
+
+                </div>
+                <div class="discrip-me">
+
+                </div>
+                <div class="discrip-list">
+
+                </div>
+            </div>
+        </section>
     <!-- about section end -->
 </body>
 </html>
