font aswam setup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>First Assignment</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/24e622f648.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header section start -->
@@ -31,16 +32,19 @@
     <!-- about section start -->
         <section>
             <div class="about-image">
-
+                <img src="/images/rifat.png" width="450px" alt="Rifat Robi">
             </div>
             <div class="my-discrip">
                 <div class="discrip-title">
-
+                    <h2>Hello, i'm Rifat Rahman Robi</h2>
                 </div>
                 <div class="discrip-me">
-
+                    <p>I want to become a full-stack web developer by complete the most popular coders academy "Programming Hero." I want to learn java script, react, mongo db etc. Everyone pray for me, I'm just want to going to see my target, Please........ <br>
+                        here is my some other's hobby. If you have time, you can check that. 
+                    </p>
                 </div>
                 <div class="discrip-list">
+                    
 
                 </div>
             </div>
