finish about section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- =================================================== -->
 <!-- =================================================== -->
     <!-- about section start -->
-        <section>
+        <section class="about-sec">
             <div class="about-image">
                 <img src="/images/rifat.png" width="450px" alt="Rifat Robi">
             </div>
@@ -44,7 +44,14 @@
                     </p>
                 </div>
                 <div class="discrip-list">
-                    
+                    <li><i class="fa-solid fa-square-check"></i> Data Base Management System</li>
+                    <li><i class="fa-solid fa-square-check"></i> Data scraping by code</li>
+                    <li><i class="fa-solid fa-square-check"></i> Location Tracker</li>
+                    <li><i class="fa-solid fa-square-check"></i> E-commerce website handling </li>
+                    <li><i class="fa-solid fa-square-check"></i> Server side look</li>
+                    <li><i class="fa-solid fa-square-check"></i> Networking concept</li>
+                    <li><i class="fa-solid fa-square-check"></i> Download web site build</li>
+                    <li>And many other's more</li>
 
                 </div>
             </div>
