my plan section start

--- a/index.html
+++ b/index.html
@@ -57,5 +57,12 @@
             </div>
         </section>
     <!-- about section end -->
+    <!-- ================================================
+    ====================================================== -->
+
+<!-- my plan start -->
+
+<!-- my plan end -->
+
 </body>
 </html>
