--- a/index.html
+++ b/index.html
@@ -61,7 +61,41 @@
     ====================================================== -->
 
 <!-- my plan start -->
-
+        <section>
+            <div class="plan-title">
+                <h3> My Plans </h3>
+            </div>
+            <div class="plans">
+                <div class="web">
+                    <img src="/images/icons/web.png" alt="web">
+                    <h3 class="p-title">Web Development </h3>
+                    <p class="p-dicprip">
+                        It's my dreem
+                    </p>
+                </div>
+                <div class="js">
+                    <img src="/images/icons/js.png" alt="js">
+                    <h3 class="p-title">java script </h3>
+                    <p class="p-dicprip">
+                        if i work hard, i can handle it
+                    </p>
+                </div>
+                <div class="smoking">
+                    <img src="/images/icons/smoke.png" alt="smoke">
+                    <h3 class="p-title">Smoking </h3>
+                    <p class="p-dicprip">
+                        i want leave it 100%
+                    </p>
+                </div>
+                <div class="ecommerce">
+                    <img src="/images/icons/ecom.png" alt="E-commerce">
+                    <h3 class="p-title">E-commerce</h3>
+                    <p class="p-dicprip">
+                        I will create a ecommerce site soon
+                    </p>
+                </div>
+            </div>
+        </section>
 <!-- my plan end -->
 
 </body>
