ini banner start

--- a/index.html
+++ b/index.html
@@ -97,6 +97,28 @@
             </div>
         </section>
 <!-- my plan end -->
+<!-- ==========================================================
+=========================================================== -->
+<!-- mini banner section start -->
+
+    <section>
+        <div class="mini-banner">
+            <div class="mbanner-title">
+                <h1> All Thinks Are <br> Possible If You <br> Believe</h1>
+            </div>
+            <div class="mbanner-discrip">
+                <p>
+                    There are many variations of passages of lorem ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour,or randomised words.
+                </p>
+            </div>
+            <div class="mbanner-btn">
+                <button class="header-btn">Call Now</button>
+            </div>
+        </div>
+    </section>
+
+<!-- mini banner section start -->
+
 
 </body>
 </html>
