--- a/index.html
+++ b/index.html
@@ -104,15 +104,11 @@
     <section>
         <div class="mini-banner">
             <div class="mbanner-title">
-                <h1> All Thinks Are <br> Possible If You <br> Believe</h1>
+                <h2> Awlays keep a positive <br>
+                    mindset</h2>
             </div>
-            <div class="mbanner-discrip">
-                <p>
-                    There are many variations of passages of lorem ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour,or randomised words.
-                </p>
-            </div>
-            <div class="mbanner-btn">
-                <button class="header-btn">Call Now</button>
+            <div>
+                <button class="mbanner-btn">Call Now</button>
             </div>
         </div>
     </section>
