capital letter change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- about section start -->
         <section class="about-sec">
             <div class="about-image">
-                <img src="/images/rifat.png" width="450px" alt="Rifat Robi">
+                <img src="/images/rifat.png" width="450px" alt="rifat robi">
             </div>
             <div class="my-discrip">
                 <div class="discrip-title">
@@ -88,7 +88,7 @@
                     </p>
                 </div>
                 <div class="ecommerce">
-                    <img src="/images/icons/ecom.png" alt="E-commerce">
+                    <img src="/images/icons/ecom.png" alt="e-commerce">
                     <h3 class="p-title">E-commerce</h3>
                     <p class="p-dicprip">
                         I will create a <br> ecommerce site soon
