--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
     <!-- about section start -->
         <section class="about-sec">
             <div class="about-image">
-                <img src="/images/rifat.png" width="450px" alt="rifat robi">
+                <img src="./images/rifat.png" width="450px" alt="rifat robi">
             </div>
             <div class="my-discrip">
                 <div class="discrip-title">
