--- a/index.html
+++ b/index.html
@@ -69,28 +69,28 @@
             </div>
             <div class="plans">
                 <div class="web">
-                    <img src="/images/icons/web.png" alt="web">
+                    <img src="./images/icons/web.png" alt="web">
                     <h3 class="p-title">Web Development </h3>
                     <p class="p-dicprip">
                         It's my dream
                     </p>
                 </div>
                 <div class="js">
-                    <img src="/images/icons/js.png" alt="js">
+                    <img src="./images/icons/js.png" alt="js">
                     <h3 class="p-title">java script </h3>
                     <p class="p-dicprip">
                         if i work hard,<br> can handle it
                     </p>
                 </div>
                 <div class="smoking">
-                    <img src="/images/icons/smoke.png" alt="smoke">
+                    <img src="./images/icons/smoke.png" alt="smoke">
                     <h3 class="p-title">Smoking </h3>
                     <p class="p-dicprip">
                         i want leave it<br>100%
                     </p>
                 </div>
                 <div class="ecommerce">
-                    <img src="/images/icons/ecom.png" alt="e-commerce">
+                    <img src="./images/icons/ecom.png" alt="e-commerce">
                     <h3 class="p-title">E-commerce</h3>
                     <p class="p-dicprip">
                         I will create a <br> ecommerce site soon
