get in touch section complete

--- a/index.html
+++ b/index.html
@@ -115,7 +115,23 @@
         </div>
     </section>
 
-<!-- mini banner section start -->
+<!-- mini banner section end -->
+
+<!-- get in touch start  -->
+
+<section>
+    <div class="get-touch">
+        <div class="get-title">
+                <h3> Get my updates </h3>
+        </div>
+                <form action="" class="form">
+                    <input type="text" class="f-email" placeholder="Your Email">
+                    <input type="button" class="f-submit" value="Subscribe">
+                </form>
+    </div>
+</section>
+
+<!-- get in touch end -->
 
 
 </body>
