--- a/index.html
+++ b/index.html
@@ -131,7 +131,28 @@
     </div>
 </section>
 
-<!-- get in touch end -->
+<!--================= get in touch end==================== -->
+
+<footer>
+    <div>
+            <div class="footer-title">
+                <h3>
+                    
+                </h3>
+            </div>
+            <div class="footer-dicrip"></div>
+            <div class="footer-contact"></div>
+            <div class="footer-social"></div>
+    </div>
+
+    <div>
+            <div></div>
+            <div></div>
+            <div></div>
+    </div>
+
+</footer>
+
 
 
 </body>
