footer html part complete

--- a/index.html
+++ b/index.html
@@ -135,20 +135,33 @@
 
 <footer>
     <div>
-            <div class="footer-title">
-                <h3>
-                    
-                </h3>
+            <div>
+                <h3 class="footer-title">Future</h3>
             </div>
-            <div class="footer-dicrip"></div>
-            <div class="footer-contact"></div>
-            <div class="footer-social"></div>
+            <div class="footer-dicrip">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, eius. Illo ratione laborum laboriosam, illum explicabo repudiandae, nobis ullam error, suscipit harum exercitationem. Cumque, quaerat dolore. Libero ipsum omnis exercitationem.</p>
+            </div>
+            <div class="footer-contact">
+                <a href="mailto:mondolrobi@gmail.com">Email: mondolrobi@gmail.com</a> <br>
+                <a href="tel:+8801740282797">Phone: +8801740282797</a>
+            </div>
+            <div class="footer-social">
+                <img src="./images/icons/fb.png" alt="fb">
+                <img src="./images/icons/youtube.png" alt="youtube">
+                <img src="./images/icons/twitter.png" alt="twitter">
+            </div>
     </div>
 
     <div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="sub-title">
+                <h3>Subscribe</h3>
+            </div>
+            <div class="sub-form">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <br>
+                <input type="submit" value="Subscribe">
+            </div>
+            
     </div>
 
 </footer>
