--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
 </section>
 
 <!--================= get in touch end==================== -->
+<!--=================footer section start================== -->
 
-<footer>
-    <div>
+<footer class="footer">
+    <div class="footer-left">
             <div>
                 <h3 class="footer-title">Future</h3>
             </div>
@@ -152,19 +153,20 @@
             </div>
     </div>
 
-    <div>
+    <div class="footer-right">
             <div class="sub-title">
                 <h3>Subscribe</h3>
             </div>
             <div class="sub-form">
-                <input type="email" name="" id="" placeholder="Your Email">
+                <input type="email" name="" id="" placeholder="Your Email" class="mail-box">
                 <br>
-                <input type="submit" value="Subscribe">
+                <input type="submit" value="Subscribe" class="sub-btn">
             </div>
             
     </div>
 
 </footer>
+<!-- ===================footer end==================== -->
 
 
 
