copy right section

--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
 </footer>
 <!-- ===================footer end==================== -->
 
+<section class="copy-right">
+    <h3>Copyright © 2023 Rifat. All Rights Reserved.
+    </h3>
+</section>
+
 
 
 </body>
